addes styles for background color and h1

--- a/nuxt3-starter-new/assets/css/main.scss
+++ b/nuxt3-starter-new/assets/css/main.scss
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: black;
+}
+
+@layer base {
+    h1 {
+        @apply text-2xl;
+    }
+}
